debian/copyright: Convert to machine-readable format (fka DEP-5)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@20325 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -7,6 +7,7 @@ linux-tools (3.10-1~exp1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * debian/patches: Add DEP-3 headers (From, Subject, Forwarded) to all patches
+  * debian/copyright: Convert to machine-readable format (fka DEP-5)
 
  -- Chris Boot <debian@bootc.net>  Mon, 01 Jul 2013 22:07:42 +0100
 
