--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -8,6 +8,7 @@ linux-tools (3.10-1~exp1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * debian/patches: Add DEP-3 headers (From, Subject, Forwarded) to all patches
   * debian/copyright: Convert to machine-readable format (fka DEP-5)
+  * debian/copyright: Add explanation of indirect linking of perf to OpenSSL
 
  -- Chris Boot <debian@bootc.net>  Mon, 01 Jul 2013 22:07:42 +0100
 
