debian/rules.real: Remove support for pre-multiarch dpkg
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@20328 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -9,6 +9,7 @@ linux-tools (3.10-1~exp1) UNRELEASED; urgency=low
   * debian/patches: Add DEP-3 headers (From, Subject, Forwarded) to all patches
   * debian/copyright: Convert to machine-readable format (fka DEP-5)
   * debian/copyright: Add explanation of indirect linking of perf to OpenSSL
+  * debian/rules.real: Remove support for pre-multiarch dpkg
 
  -- Chris Boot <debian@bootc.net>  Mon, 01 Jul 2013 22:07:42 +0100
 
