--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -10,6 +10,8 @@ linux-tools (3.10-1~exp1) UNRELEASED; urgency=low
   * debian/copyright: Convert to machine-readable format (fka DEP-5)
   * debian/copyright: Add explanation of indirect linking of perf to OpenSSL
   * debian/rules.real: Remove support for pre-multiarch dpkg
+  * Update policy version to 3.9.4
+    - debian/rules: Implement build-arch and build-indep targets
 
  -- Chris Boot <debian@bootc.net>  Mon, 01 Jul 2013 22:07:42 +0100
 
