--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,3 +1,10 @@
+firmware-free (3.3) UNRELEASED; urgency=low
+
+  * To allow auto-removal of linux-image-* packages, do not suggest
+    virtual package linux-image (Closes: #724563)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 25 Sep 2013 04:42:22 +0100
+
 firmware-free (3.2) unstable; urgency=low
 
   * Update to linux-support 3.2.0-4
