--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,3 +1,9 @@
+linux-tools (3.12-1~exp1) UNRELEASED; urgency=low
+
+  * New upstream release (Closes: #729197)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 18 Nov 2013 04:17:25 +0000
+
 linux-tools (3.11-3) unstable; urgency=low
 
   * linux-tools: Replace build-dependency on libunwind8-dev with
