--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,6 +1,7 @@
 linux-tools (3.12-1~exp1) UNRELEASED; urgency=low
 
   * New upstream release (Closes: #729197)
+  * [x86, powerpc, ppc64] linux-tools: Build perf with libnuma
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 18 Nov 2013 04:17:25 +0000
 
