--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,9 +1,9 @@
-linux-tools (3.12-1~exp1) UNRELEASED; urgency=low
+linux-tools (3.12-1~exp1) experimental; urgency=low
 
   * New upstream release (Closes: #729197)
   * [x86, powerpc, ppc64] linux-tools: Build perf with libnuma
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 18 Nov 2013 04:17:25 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 18 Nov 2013 05:14:34 +0000
 
 linux-tools (3.11-3) unstable; urgency=low
 
