--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,3 +1,11 @@
+linux-tools (3.12-1~exp2) UNRELEASED; urgency=low
+
+  * linux-tools: Replace build-dependency on binutils-dev with
+    libiberty-dev (or old binutils-dev, for ease of backporting)
+    (Closes: #730883)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 30 Nov 2013 23:48:32 +0000
+
 linux-tools (3.12-1~exp1) experimental; urgency=low
 
   * New upstream release (Closes: #729197)
