--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,5 +1,6 @@
-linux-tools (3.12-1~exp2) UNRELEASED; urgency=low
+linux-tools (3.13-1~exp1) UNRELEASED; urgency=low
 
+  * New upstream release
   * linux-tools: Replace build-dependency on binutils-dev with
     libiberty-dev (or old binutils-dev, for ease of backporting)
     (Closes: #730883)
