Prepare to release linux-tools (3.13-1~exp1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@21019 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,4 +1,4 @@
-linux-tools (3.13-1~exp1) UNRELEASED; urgency=low
+linux-tools (3.13-1~exp1) experimental; urgency=low
 
   * New upstream release
 
