--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,3 +1,9 @@
+linux-tools (3.13-1~exp2) experimental; urgency=medium
+
+  * Merge changes from sid up to 3.12.6-3
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 02 Feb 2014 16:57:49 +0100
+
 linux-tools (3.13-1~exp1) experimental; urgency=low
 
   * New upstream release
