--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,9 +1,9 @@
-linux-tools (3.13-1~exp3) UNRELEASED; urgency=medium
+linux-tools (3.13-1~exp3) experimental; urgency=medium
 
   * linux-tools: Fix/revert unportable code in perf trace (fixes FTBFS
     on powerpc, sparc)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 05 Feb 2014 04:45:12 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 07 Feb 2014 20:36:29 +0000
 
 linux-tools (3.13-1~exp2) experimental; urgency=medium
 
