--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -2,6 +2,7 @@ firmware-free (3.3) UNRELEASED; urgency=low
 
   * To allow auto-removal of linux-image-* packages, do not suggest
     virtual package linux-image (Closes: #724563)
+  * Update to linux-support 3.13-1
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 25 Sep 2013 04:42:22 +0100
 
