Fix wrapping of file lists in package description (Closes: #677970)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@21069 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -3,6 +3,7 @@ firmware-free (3.3) UNRELEASED; urgency=low
   * To allow auto-removal of linux-image-* packages, do not suggest
     virtual package linux-image (Closes: #724563)
   * Update to linux-support 3.13-1
+  * Fix wrapping of file lists in package description (Closes: #677970)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 25 Sep 2013 04:42:22 +0100
 
