--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,11 +1,11 @@
-firmware-free (3.3) UNRELEASED; urgency=low
+firmware-free (3.3) unstable; urgency=medium
 
   * To allow auto-removal of linux-image-* packages, do not suggest
     virtual package linux-image (Closes: #724563)
   * Update to linux-support 3.13-1
   * Fix wrapping of file lists in package description (Closes: #677970)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 25 Sep 2013 04:42:22 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 22 Feb 2014 16:45:33 +0000
 
 firmware-free (3.2) unstable; urgency=low
 
