--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,3 +1,9 @@
+firmware-free (3.4) UNRELEASED; urgency=medium
+
+  * Suppress lintian warning due to unusual location of copyright file
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 22 Feb 2014 22:09:39 +0000
+
 firmware-free (3.3) unstable; urgency=medium
 
   * To allow auto-removal of linux-image-* packages, do not suggest
