--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,6 +1,8 @@
 firmware-free (3.4) UNRELEASED; urgency=medium
 
   * Suppress lintian warning due to unusual location of copyright file
+  * debian/control: Allow debhelper to add dependencies through
+    ${misc:Depends}
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 22 Feb 2014 22:09:39 +0000
 
