--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -3,6 +3,7 @@ firmware-free (3.4) UNRELEASED; urgency=medium
   * Suppress lintian warning due to unusual location of copyright file
   * debian/control: Allow debhelper to add dependencies through
     ${misc:Depends}
+  * debian/control: Update Standards-Version to 3.9.5; no changes needed
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 22 Feb 2014 22:09:39 +0000
 
