--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,3 +1,9 @@
+linux-tools (3.14~rc5-1~exp1) UNRELEASED; urgency=medium
+
+  * New upstream release candidate
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 09 Mar 2014 13:45:19 +0000
+
 linux-tools (3.13.4-1) unstable; urgency=medium
 
   * New upstream stable update:
