--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,8 +1,8 @@
-linux-tools (3.14-1~exp1) UNRELEASED; urgency=medium
+linux-tools (3.14-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 31 Mar 2014 13:13:35 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 28 Apr 2014 17:46:24 +0100
 
 linux-tools (3.14~rc7-1~exp1) experimental; urgency=medium
 
