--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -2,6 +2,9 @@ linux-tools (3.16-1) UNRELEASED; urgency=medium
 
   * New upstream release
 
+  [ Mauricio Faria de Oliveira ]
+  * [ppc64el] Build linux-tools binary package
+
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 23 Aug 2014 17:50:42 -0700
 
 linux-tools (3.16~rc7-1~exp1) experimental; urgency=medium
