Add bug closure for linux-tools on ppc64el
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@21748 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -3,7 +3,7 @@ linux-tools (3.16-1) UNRELEASED; urgency=medium
   * New upstream release
 
   [ Mauricio Faria de Oliveira ]
-  * [ppc64el] Build linux-tools binary package
+  * [ppc64el] Build linux-tools binary package (Closes: #754213)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 23 Aug 2014 17:50:42 -0700
 
