linux-kbuild: Build and install recordmcount and recordmcount.pl
These are needed now that we build kernels with DYNAMIC_FTRACE enabled.

Also fix the recordmcount dependency for OOT modules - they should not
depend on its source files!


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@21789 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -5,6 +5,11 @@ linux-tools (3.16-1) UNRELEASED; urgency=medium
   [ Mauricio Faria de Oliveira ]
   * [ppc64el] Build linux-tools binary package (Closes: #754213)
 
+  [ Ben Hutchings ]
+  * linux-kbuild: Build and install recordmcount and recordmcount.pl,
+    needed for kernels with DYNAMIC_FTRACE enabled
+  * linux-kbuild: Fix recordmcount dependency for OOT modules
+
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 23 Aug 2014 17:50:42 -0700
 
 linux-tools (3.16~rc7-1~exp1) experimental; urgency=medium
