--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,4 +1,4 @@
-linux-tools (3.16-1) UNRELEASED; urgency=medium
+linux-tools (3.16-1) unstable; urgency=medium
 
   * New upstream release
 
@@ -10,7 +10,7 @@ linux-tools (3.16-1) UNRELEASED; urgency=medium
     needed for kernels with DYNAMIC_FTRACE enabled
   * linux-kbuild: Fix recordmcount dependency for OOT modules
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sat, 23 Aug 2014 17:50:42 -0700
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 08 Sep 2014 18:45:06 +0100
 
 linux-tools (3.16~rc7-1~exp1) experimental; urgency=medium
 
