--- a/linux/debian/changelog
+++ b/linux/debian/changelog
@@ -1,12 +1,12 @@
-linux (3.17-1~exp1) UNRELEASED; urgency=medium
+linux (3.17-1~exp1) experimental; urgency=medium
 
-  * New upstream release candidate
+  * New upstream release: http://kernelnewbies.org/Linux_3.17
 
   * armel: Drop ixp4xx image.
   * topconfig: Reenable renamed IP_NF_NAT. (closes #762458)
   * udeb: refix renamed i2c-core.
 
- -- maximilian attems <maks@debian.org>  Thu, 18 Sep 2014 23:50:00 +0200
+ -- maximilian attems <maks@debian.org>  Tue, 14 Oct 2014 23:01:39 +0200
 
 linux (3.17~rc5-1~exp1) experimental; urgency=medium
 
