--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,9 +1,9 @@
-linux-tools (3.17-1~exp1) UNRELEASED; urgency=medium
+linux-tools (3.17-1~exp1) experimental; urgency=medium
 
   * New upstream release
     - usbip userspace moved to tools/usb/usbip
 
- -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Oct 2014 11:49:02 +0200
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Oct 2014 14:58:51 +0200
 
 linux-tools (3.16-2) unstable; urgency=medium
 
