--- a/linux/debian/changelog
+++ b/linux/debian/changelog
@@ -1,5 +1,10 @@
-linux (3.18-1~exp2) UNRELEASED; urgency=medium
+linux (3.18.2-1~exp1) UNRELEASED; urgency=medium
 
+  * New upstream stable update:
+    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.18.1
+    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.18.2
+
+  [ Ian Campbell ]
   * [armel/kirkwood]: Enable DEBUG_MVEBU_UART_ALTERNATE to match the behaviour
     of previous boardfile based kirkwood kernels. Otherwise the kernel silently
     crashes during boot.
