[hppa] udeb: Fix duplicate modules in ata-modules, pata-modules [hppa] Create build-dependencies on binutils-hppa64 and gcc-4.9-hppa64
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@22277 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux/debian/changelog
+++ b/linux/debian/changelog
@@ -15,6 +15,11 @@ linux (3.18.3-1~exp1) UNRELEASED; urgency=medium
   * Add xhci-pci and xhci-plat-hcd to usb-modules udeb. (Inspired by #770912).
   * [armhf/armmp]: Enable support for Tegra124 based platforms.
 
+  [ Helge Deller ]
+  * [hppa] udeb: Fix duplicate modules in ata-modules, pata-modules
+    (Closes: #770102)
+  * [hppa] Create build-dependencies on binutils-hppa64 and gcc-4.9-hppa64
+
  -- Ian Campbell <ijc@debian.org>  Thu, 11 Dec 2014 20:37:22 +0000
 
 linux (3.18-1~exp1) experimental; urgency=medium
